--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/dashboard"
-        android:title="Dashboard"
-        android:icon="@drawable/ic_dashboard" />
+        android:id="@+id/message"
+        android:title="Messages"
+        android:icon="@drawable/ic_message" />
 
     <item
         android:id="@+id/home"
@@ -14,17 +14,17 @@
     <item
         android:id="@+id/createlist"
         android:title="Create List"
-        android:icon="@drawable/ic_info" />
+        android:icon="@drawable/ic_list" />
 
     <item
         android:id="@+id/search"
         android:title="Search"
-        android:icon="@drawable/ic_info" />
+        android:icon="@drawable/ic_search" />
 
     <item
         android:id="@+id/account"
-        android:title=""
-        android:icon="@drawable/ic_info" />
+        android:title="Account"
+        android:icon="@drawable/ic_account_circle" />
 
 
 </menu>
