--- a/app/src/main/res/layout/item_heading.xml
+++ b/app/src/main/res/layout/item_heading.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content"
     android:layout_margin="1dp"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:orientation="vertical">
 
     <TextView
-        android:id="@+id/heading_dev"
+        android:id="@+id/txtTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Developer"
@@ -14,5 +15,4 @@
         android:textStyle="bold"
         android:gravity="center_horizontal" />
 
-
-</RelativeLayout>
+</LinearLayout>
