--- a/app/src/main/res/layout/item_account_header.xml
+++ b/app/src/main/res/layout/item_account_header.xml
@@ -1,29 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="1dp"
-    android:padding="8dp"
-    android:background="#fff">
+    android:padding="15dp"
+    android:id="@+id/parent_layout">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:id="@+id/image"
-        android:src="@mipmap/ic_launcher"
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="50dp"/>
+        android:src="@mipmap/ic_launcher"/>
 
     <TextView
-        android:id="@+id/image_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="152dp"
-        android:layout_toRightOf="@+id/image"
         android:text="Canada"
+        android:id="@+id/image_name"
+        android:layout_toRightOf="@+id/image"
         android:textColor="#000"
-        android:textSize="24sp"
-        android:textStyle="bold|italic" />
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="30dp"
+        android:textSize="17sp"/>
+
 </RelativeLayout>
