--- a/app/src/main/res/layout/item_account_header.xml
+++ b/app/src/main/res/layout/item_account_header.xml
@@ -12,7 +12,7 @@
         android:src="@drawable/ic_account_circle"/>
 
     <TextView
-        android:id="@+id/image_name"
+        android:id="@+id/txtAccountName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
