--- a/app/src/main/res/layout/item_account_label.xml
+++ b/app/src/main/res/layout/item_account_label.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/txtTitle"
+        android:id="@+id/txtLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Created Lists"
