--- a/app/src/main/res/layout/item_account_header.xml
+++ b/app/src/main/res/layout/item_account_header.xml
@@ -3,24 +3,24 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="15dp"
-    android:id="@+id/parent_layout">
+    android:id="@+id/recyclerViewAccount">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:id="@+id/image"
-        android:src="@drawable/ic_account_circle"/>
+        android:src="@drawable/ic_account_circle"
+        android:layout_centerHorizontal="true"/>
 
     <TextView
         android:id="@+id/txtAccountName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="30dp"
-        android:layout_toRightOf="@+id/image"
         android:text="crizzuti94"
         android:textColor="#000"
-        android:textSize="38sp"
-        android:textStyle="bold|italic" />
+        android:textSize="50sp"
+        android:textStyle="bold|italic"
+        android:layout_below="@+id/image"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
