--- a/app/src/main/res/layout/item_account_label.xml
+++ b/app/src/main/res/layout/item_account_label.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:layout_margin="1dp"
+    android:padding="8dp"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/txtLabel"
@@ -8,8 +11,8 @@
         android:layout_height="wrap_content"
         android:text="Created Lists"
         android:textColor="#000"
-        android:textSize="50dp"
+        android:textSize="38dp"
         android:textStyle="bold"
         android:gravity="center_horizontal" />
 
-</RelativeLayout>
+</LinearLayout>
