--- a/app/src/main/res/layout/item_account_header.xml
+++ b/app/src/main/res/layout/item_account_header.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="15dp"
-    android:id="@+id/recyclerViewAccount">
+    android:padding="15dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="200dp"
