--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -8,7 +8,7 @@
 
     <item
         android:id="@+id/createlist"
-        android:title="Create List"
+        android:title="Modify List"
         android:icon="@drawable/ic_list" />
 
     <item
