--- a/app/src/main/res/layout/item_modlist_object.xml
+++ b/app/src/main/res/layout/item_modlist_object.xml
@@ -13,4 +13,11 @@
         android:textSize="38dp"
         android:textColor="#000000"/>
 
+    <Spinner
+        android:id="@+id/static_spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp" />
+
 </LinearLayout>
