--- a/app/src/main/res/layout/item_modlist_object.xml
+++ b/app/src/main/res/layout/item_modlist_object.xml
@@ -38,7 +38,7 @@
                 android:padding="1dp"
                 android:text="Placeholder Title"
                 android:textColor="#000"
-                android:textSize="24sp"
+                android:textSize="32dp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/item_image"
                 app:layout_constraintTop_toTopOf="parent" />
